# guac_rs

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  readme.md
.git-hooks/: pre-commit
docs/: flow.md  new-flow.md  new-spec.md
docs/diagrams/: channel_state.dot  channel_state.md  happy_path_flow.1.msc  happy_path_flow.md  happy_path_flow.msc  open_channel.msc  open_from_scratch.msc  open_from_scratch_w_join.msc  open_from_scratch_w_make.msc  open_from_scratch_w_make_simultaneous..msc  refill.msc  refill_or_withdraw.msc  refill_w_make.msc  simultaneous_opening.msc  simultaneous_opening_no_propose.msc  state_machine.dot  withdraw.msc
docs/diagrams/src/: fast_close.msc  open_from_scratch.msc  refill_or_withdraw.msc  render.sh  simultaneous_opening.msc  slow_close.msc  state_machine.dot
docs/guac-external-api/: init.md
docs/propose_diagrams/: note.md  simultaneous_opening.msc
guac_actix/: Cargo.toml
guac_actix/network_endpoints/: mod.rs
guac_actix/src/: channel_actor.rs  lib.rs  network_endpoints.rs  network_requests.rs
guac_actix/tests/: payments_test.rs
guac_core/: Cargo.toml
guac_core/src/: api.rs  channel.rs  channel_manager.rs  channel_storage.rs  counterparty.rs  counterparty_api.rs  crypto.rs  crypto_old.rs  error.rs  eth_client.rs  lib.rs  network.rs  new_crypto.rs  payment_contract.rs  payment_manager.rs  storage.rs  transport_protocol.rs  types.rs
guac_core/src/channel_client/: channel.rs  channel_manager.rs  channel_manager_new.rs  combined_state.rs  mod.rs  types.rs
guac_core/src/contracts/: guac_contract.rs  mod.rs
guac_core/src/payments/: guac.rs
guac_core/src/storage/: in_memory.rs  mod.rs
guac_core/src/storages/: in_memory.rs
guac_core/src/transports/http/: client.rs  client_factory.rs  mod.rs  network_request.rs
guac_core/src/web3/: client.rs  mod.rs  types.rs
guac_core/src/web3/jsonrpc/: client.rs  response.rs
guac_core/tests/: contract_test.js  contract_test.rs
guac_http/: Cargo.toml  build.rs  config.toml
guac_http/src/: blockchain_client.rs  bounty_hunter_client.rs  client.rs  config.rs  counterparty_client.rs  counterparty_server.rs  lib.rs  main.rs  network_endpoints.rs  network_requests.rs  server.rs
guac_http/src/network_endpoints/: mod.rs
scripts/: chain-prep.sh  local-test-setup.sh
src/: counterparty.rs  crypto.rs  db.rs  eth_client.rs  logic.rs  main.rs  maine.rs  types.rs
src/abi/: ethcalate-bidirectional-erc20-single-abi.json
src/channel_client/: types.rs
src/network_endpoints/: mod.rs
web3/: Cargo.toml
web3/src/: client.rs  lib.rs  types.rs
web3/src/jsonrpc/: client.rs  request.rs  response.rs
