[workspace]
members = ["guac_core", "guac_actix", "guac_http"]

[patch.crates-io]
ethereum-types = {git="https://github.com/paritytech/primitives.git", rev="6f5f681"}
actix = { git = "https://github.com/kingoflolz/actix.git", branch = "althea-mesh" }
althea_types = {git="https://github.com/althea-mesh/althea_rs.git"}