[package]
name = "guac_actix"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = {version = "0.7",  default-features = false}
futures = "0.1"
failure = "0.1"
guac_core = {path="../guac_core"}
althea_types = {git="https://github.com/mpapierski/althea_rs.git", branch="236-guac-integration"}
log = "0.4"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.24"
qutex = "^0.2"
tokio = "0.1"
bytes = "0.4"
clarity = "0.1"
num256 = "0.2"