[package]
name = "guac_core"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
rand = "0.4.2"
futures = "0.1"
failure_derive = "*"
uuid = { version = "0.5", features = ["serde", "v4"] }
althea_types = {git="https://github.com/mpapierski/althea_rs.git", branch="use-eth-types-0.3"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.1"
base64 = "0.9.0"
tiny-keccak = "1.4.1"
mockito = "0.9.1"
web3 = "0.3.0"
lazy_static = "1.0"
ethcore-transaction = {git="https://github.com/paritytech/parity.git"}
ethkey = {git="https://github.com/paritytech/parity.git"}
ethereum-types = "0.3.2"
ethabi-derive = "5.1.2"
ethabi = "=5.1.1"
multihash = "0.8.0"
hex = "0.3.2"
diesel = { version = "1.3.2", features = ["sqlite"] }
dotenv = "0.10"
qutex = "^0.2"
owning_ref = {git="https://github.com/kingoflolz/owning-ref-rs/", branch="fix-bug"}
