[package]
name = "guac_core"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
rand = "0.4.2"
futures = "0.1"
failure_derive = "*"
uuid = { version = "0.5", features = ["serde", "v4"] }
althea_types = {git="https://github.com/mpapierski/althea_rs.git", branch="236-guac-integration"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.1"
base64 = "0.9.0"
tiny-keccak = "1.4.1"
mockito = "0.9.1"
web3 = "0.4"
lazy_static = "1.0"
# XXX: Bumping to 5.1.2 or later brings ethereum-types 0.4 which we don't want to use because other deps use ethereum-types 0.3.
ethabi = "=5.1.1"
multihash = "0.8.0"
hex = "0.3.2"
diesel = { version = "1.3.2", features = ["sqlite"] }
dotenv = "0.10"
qutex = "^0.2"
owning_ref = "0.4"
clarity = "0.1"
sha3 = "0.8"
num256 = "0.1"

[dev-dependencies]
lazy_static = "1.0"
rand = "0.3"