[package]
name = "guac_core"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]

[dependencies]
num = "0.2"
log = "0.4"
env_logger = "0.5"
rand = "0.4.2"
futures = "0.1"
failure_derive = "*"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.1"
base64 = "0.9.0"
tiny-keccak = "1.4.1"
lazy_static = "1.0"
multihash = "0.8.0"
hex = "0.3.2"
dotenv = "0.10"
qutex = "^0.2"
owning_ref = "0.4"
clarity = "0.1"
sha3 = "0.8"
num256 = "0.2"
actix-web = {version = "0.7",  default-features = false}
tokio = "0.1"
futures-timer = "0.1"

[dev-dependencies]
lazy_static = "1.0"
mockito = "0.13"
actix = "0.7"
futures-executor = "0.2"