
[package]
name = "guac_http"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>", "Jehan Tremback <jehan@altheamesh.com>", "Michal Papierski <michal@papierski.net>"]
# edition = "2018"

[dependencies]
actix = "0.7"
actix-web = {version = "0.7",  default-features = false}
futures = "0.1"
failure = "0.1"
guac_core = {path="../guac_core"}
web3 = {path="../web3"}
althea_types = {git="https://github.com/mpapierski/althea_rs.git", branch="236-guac-integration"}
log = "0.4"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.24"
qutex = "^0.2"
tokio = "0.1"
bytes = "0.4"
clarity = "0.1"
num256 = "0.2"

[build-dependencies.config_struct]
version = "~0.2.0"
features = ["toml-parsing"]